# tapout

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
demo/: fake-session.md
plugins/tapout/: README.md
plugins/tapout-claude/: README.md
plugins/tapout-claude/.claude-plugin/: plugin.json
plugins/tapout/.claude-plugin/: plugin.json
plugins/tapout/commands/: pause.md
plugins/tapout/hooks/: hooks.json  run_capture.py
src/tapout/: __init__.py  __main__.py  agents.toml  capture.py  cli.py  detect.py  handoff.py  monitor.py  registry.py  resume.py  tray.py
tests/: test_tapout.py  test_tray.py
