[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapout"
version = "0.1.0.dev0"
description = "Limit-aware handoff between AI coding agents. Your coding agent tapped out? Tag in the next one."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mithun" }]
keywords = ["ai", "agents", "claude", "codex", "gemini", "cursor", "handoff", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
dev = ["pytest>=8.0", "pyperclip>=1.8"]

[project.scripts]
tap = "tapout.cli:app"
tapout = "tapout.cli:app"

[project.urls]
Homepage = "https://pypi.org/project/tapout/"

[tool.hatch.version]
path = "src/tapout/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tapout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
