[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapout"
dynamic = ["version"]
description = "Pass the baton between AI coding agents - hit a limit in Claude Code, resume exactly where you left off in Codex, Gemini, or Cursor."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mithun" }]
keywords = ["ai", "agents", "claude", "codex", "gemini", "cursor", "handoff", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
tray = [
    "pystray>=0.19",
    "Pillow>=10.0",
    "windows-toasts>=1.0; sys_platform == 'win32'",
]
dev = ["pytest>=8.0", "pyperclip>=1.8", "pystray>=0.19", "Pillow>=10.0", "windows-toasts>=1.0; sys_platform == 'win32'"]

[project.scripts]
tap = "tapout.cli:main"
tapout = "tapout.cli:main"

[project.urls]
Homepage = "https://github.com/MIthunvasanth/tapout"
Repository = "https://github.com/MIthunvasanth/tapout"
Issues = "https://github.com/MIthunvasanth/tapout/issues"

[tool.hatch.version]
path = "src/tapout/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tapout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
